--- a/notebooks/1.6-batch-coherence.ipynb
+++ b/notebooks/1.6-batch-coherence.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c6f3d08",
+   "id": "4ea9985f",
    "metadata": {},
    "source": [
     "### ========================================================="
@@ -706,13 +706,13 @@
     ")\n",
     "print(\"Real ----->\")\n",
     "print(\n",
-    "    f\"Percentage of positive predictions made that are within proximity of 2: {100*close_matches/num_real_positives}\"\n",
+    "    f\"Percentage of real predictions made that are within proximity of 2: {100*close_matches/num_real_positives}\"\n",
     ")\n",
     "print(\n",
-    "    f\"Percentage of positive predictions made that are within proximity of 1: {100*very_close_matches/num_real_positives}\"\n",
+    "    f\"Percentage of real predictions made that are within proximity of 1: {100*very_close_matches/num_real_positives}\"\n",
     ")\n",
     "print(\n",
-    "    f\"Percentage of positive predictions made that are exact matches: {100*exact_matches/num_real_positives}\"\n",
+    "    f\"Percentage of real predictions made that are exact matches: {100*exact_matches/num_real_positives}\"\n",
     ")"
    ]
   },
@@ -812,17 +812,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "id": "7505798e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.2948717948717949, 0.7666666666666666)"
+       "(39, 15, 0.2948717948717949, 0.7666666666666666)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -831,9 +831,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 85;\n",
-       "                var nbb_unformatted_code = \"numerator = (\\n    (1 / 3 * (close_matches / num_real_positives))\\n    + (1 / 2 * (very_close_matches / num_real_positives))\\n    + (exact_matches / num_real_positives)\\n)\\n\\ndenominator = (\\n    (1 / 3 * (close_matches / num_positive_predictions))\\n    + (1 / 2 * (very_close_matches / num_positive_predictions))\\n    + (exact_matches / num_positive_predictions)\\n)\\n\\nnumerator, denominator\";\n",
-       "                var nbb_formatted_code = \"numerator = (\\n    (1 / 3 * (close_matches / num_real_positives))\\n    + (1 / 2 * (very_close_matches / num_real_positives))\\n    + (exact_matches / num_real_positives)\\n)\\n\\ndenominator = (\\n    (1 / 3 * (close_matches / num_positive_predictions))\\n    + (1 / 2 * (very_close_matches / num_positive_predictions))\\n    + (exact_matches / num_positive_predictions)\\n)\\n\\nnumerator, denominator\";\n",
+       "                var nbb_cell_id = 90;\n",
+       "                var nbb_unformatted_code = \"numerator = (\\n    (1 / 3 * (close_matches / num_real_positives))\\n    + (1 / 2 * (very_close_matches / num_real_positives))\\n    + (exact_matches / num_real_positives)\\n)\\n\\ndenominator = (\\n    (1 / 3 * (close_matches / num_positive_predictions))\\n    + (1 / 2 * (very_close_matches / num_positive_predictions))\\n    + (exact_matches / num_positive_predictions)\\n)\\n\\nnum_real_positives, num_positive_predictions, numerator, denominator\";\n",
+       "                var nbb_formatted_code = \"numerator = (\\n    (1 / 3 * (close_matches / num_real_positives))\\n    + (1 / 2 * (very_close_matches / num_real_positives))\\n    + (exact_matches / num_real_positives)\\n)\\n\\ndenominator = (\\n    (1 / 3 * (close_matches / num_positive_predictions))\\n    + (1 / 2 * (very_close_matches / num_positive_predictions))\\n    + (exact_matches / num_positive_predictions)\\n)\\n\\nnum_real_positives, num_positive_predictions, numerator, denominator\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -867,13 +867,61 @@
     "    + (exact_matches / num_positive_predictions)\n",
     ")\n",
     "\n",
-    "numerator, denominator"
+    "num_real_positives, num_positive_predictions, numerator, denominator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "35210c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.22606837606837607, 2.5999999999999996)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 92;\n",
+       "                var nbb_unformatted_code = \"numerator * denominator, denominator / numerator\";\n",
+       "                var nbb_formatted_code = \"numerator * denominator, denominator / numerator\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "numerator * denominator, denominator / numerator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0b4ce4",
+   "id": "883b03ed",
    "metadata": {},
    "outputs": [],
    "source": []
