--- a/notebooks/1.1-db-exploration.ipynb
+++ b/notebooks/1.1-db-exploration.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "661fbbc5",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 2;\n",
+       "                var nbb_cell_id = 10;\n",
        "                var nbb_unformatted_code = \"import sqlite3\\nfrom sqlite3 import Error\\nimport pickle\\nimport os, sys\\nimport config\\n\\nconfig.root_path = os.path.abspath(os.path.join(os.getcwd(), \\\"..\\\"))\\nsys.path.insert(0, config.root_path)\\n\\nfrom db.dbv2 import Table, AugmentedTable, TrainTestTable\";\n",
        "                var nbb_formatted_code = \"import sqlite3\\nfrom sqlite3 import Error\\nimport pickle\\nimport os, sys\\nimport config\\n\\nconfig.root_path = os.path.abspath(os.path.join(os.getcwd(), \\\"..\\\"))\\nsys.path.insert(0, config.root_path)\\n\\nfrom db.dbv2 import Table, AugmentedTable, TrainTestTable\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -90,18 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "748106fe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clinical\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 8;\n",
-       "                var nbb_unformatted_code = \"dataset_type = \\\"disease\\\"\\ntable = Table(dataset_type)\\naugmented_table = AugmentedTable(dataset_type)\\ntrain_test_table = TrainTestTable(dataset_type)\";\n",
-       "                var nbb_formatted_code = \"dataset_type = \\\"disease\\\"\\ntable = Table(dataset_type)\\naugmented_table = AugmentedTable(dataset_type)\\ntrain_test_table = TrainTestTable(dataset_type)\";\n",
+       "                var nbb_cell_id = 11;\n",
+       "                var nbb_unformatted_code = \"dataset_type = \\\"clinical\\\"\\ntable = Table(dataset_type)\\n# augmented_table = AugmentedTable(dataset_type)\\n# train_test_table = TrainTestTable(dataset_type)\";\n",
+       "                var nbb_formatted_code = \"dataset_type = \\\"clinical\\\"\\ntable = Table(dataset_type)\\n# augmented_table = AugmentedTable(dataset_type)\\n# train_test_table = TrainTestTable(dataset_type)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -123,15 +130,15 @@
     }
    ],
    "source": [
-    "dataset_type = \"disease\"\n",
+    "dataset_type = \"clinical\"\n",
     "table = Table(dataset_type)\n",
-    "augmented_table = AugmentedTable(dataset_type)\n",
-    "train_test_table = TrainTestTable(dataset_type)"
+    "# augmented_table = AugmentedTable(dataset_type)\n",
+    "# train_test_table = TrainTestTable(dataset_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e42fc7fb",
    "metadata": {},
    "outputs": [
@@ -140,7 +147,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 9;\n",
+       "                var nbb_cell_id = 12;\n",
        "                var nbb_unformatted_code = \"all_rows = table.get_all()\";\n",
        "                var nbb_formatted_code = \"all_rows = table.get_all()\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "f072849f",
    "metadata": {},
    "outputs": [
@@ -178,7 +185,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 10;\n",
+       "                var nbb_cell_id = 14;\n",
        "                var nbb_unformatted_code = \"all_text = [x[1] for x in all_rows]\";\n",
        "                var nbb_formatted_code = \"all_text = [x[1] for x in all_rows]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
